Add argon solution

--- a/examples/week_9/passwords/secrets.cfg
+++ b/examples/week_9/passwords/secrets.cfg
@@ -1,4 +1,4 @@
 [secrets]
-# PEPPER = some really long string that I keep secret
+PEPPER = some really long string that I keep secret
 DB_USERNAME = student
 DB_PASSWORD = password
